dist_man1_MANS=

if BUILD_BITCOINDXD
  dist_man1_MANS+=bitcoindxd.1
endif

if ENABLE_QT
  dist_man1_MANS+=bitcoindx-qt.1
endif

if BUILD_BITCOINDX_CLI
  dist_man1_MANS+=bitcoindx-cli.1
endif

if BUILD_BITCOINDX_TX
  dist_man1_MANS+=bitcoindx-tx.1
endif

if BUILD_BITCOINDX_UTIL
  dist_man1_MANS+=bitcoindx-util.1
endif

if ENABLE_WALLET
if BUILD_BITCOINDX_WALLET
  dist_man1_MANS+=bitcoindx-wallet.1
endif
endif
